--- a/html/index.html
+++ b/html/index.html
@@ -52,26 +52,26 @@
 <button id="popup" class="feedback-button" type="button" onclick="toggle_visibility()">Feedback</button>
 
 <div class="stay-here">
-    <h1>Saijal Bhalla</h1>
+    <h1>Sanchi Bhalla</h1>
     <div class="circle">
     <img src= "../img/profile.jpg" alt="Introtopic">
     </div>
     <p></p>
-    <p>I am Web Developer<p>
-      <p>Shaheed Sukhdev Of Buisness Studies</p>
+    <p>I am Web Developer and Machine Learning Enthusiast<p>
+      <p>Netaji Subhash University Of Technology</p>
     <p>Delhi University</p>
     <h3>Contact</h3>
     <div class="container"  style="font-size:35px">
-      <p><a href="https://www.instagram.com/saijal_bhalla/" target="_blank">
+      <p><a href="https://www.instagram.com/sanchi_bhalla/" target="_blank">
         <i class="fa fa-instagram"></i>
         </a>
         <a href="https://www.linkedin.com/in/sanchi-bhalla-48006a17a/" target="_blank">
           <i class="fa fa-linkedin"></i>
         </a>
-        <a href="https://www.instagram.com/saijal_bhalla/" target="_blank">
+        <a href="https://www.instagram.com/sanchi_bhalla/" target="_blank">
           <i class="fa fa-twitter"></i>
         </a>
-        <a href="https://github.com/SaijalBhalla" target="_blank">
+        <a href="https://github.com/Sanchi7Bhalla" target="_blank">
           <i class="fa fa-github"></i>
         </a>
         <a href="https://www.facebook.com/sanchi.bhalla.14" target="_blank">
