--- a/html/resume.html
+++ b/html/resume.html
@@ -48,16 +48,16 @@
 
 <div class="bgbg">
 
-    <h1>SAIJAL BHALLA</h1>
-    <h4>Web Developer</h4>
+    <h1>SANCHI BHALLA</h1>
+    <h4>Web Developer and Machine Learning Enthusiast</h4>
 
-    <p>Email: <a href="mailto:saijal00bhalla@gamil.com" target="_blank">saijal00bhalla@gamil.com</a></p>
+    <p>Email: <a href="mailto:sanchibhalla98@gamil.com" target="_blank">sanchibhalla98@gamil.com</a></p>
 
     <h2>Education</h2>
 
-    <h3>Shaheed Sukhdev College Of Business Studies</h3>
-    <h4>B.Sc. Computer Science, CGPA 8.91</h4>
-    <h4>(2020-2022)</h4>
+    <h3>Netaji Subhash University Of Technology</h3>
+    <h4>B.E. Mechanical Engineer, CGPA 7.63</h4>
+    <h4>(2018-2022)</h4>
     <h2>Skills</h2>
       <ul>
         <li>Front end</li>
@@ -68,8 +68,8 @@
       </ul>
     <h2>Position of Resposibility </h2>
    <ul>
-    <li>Coordinator - Anthropos - The HRDC cell of SSCBS</li>
-    <li>Core committee member of Kronos –The Tech Society of SSCBS</li>
+    <li>Public Relations and Internal Affairs Head</li>
+    <li> Ashwamedh-The Dramatics Society Of Nsut</li>>
    </ul>
      <h2>Projects Untertaken</h2>
    <ul>
@@ -109,7 +109,7 @@
   <footer class="panel-footer">
     <div class="container">
       <div class="row">
-        <div class="text-center">&copy; Copyright Saijal Bhalla</div> 
+        <div class="text-center">&copy; Copyright Sanchi Bhalla</div> 
       </div>
     </div>
   </footer>
