--- a/html/index.html
+++ b/html/index.html
@@ -62,13 +62,13 @@
     <p>Delhi University</p>
     <h3>Contact</h3>
     <div class="container"  style="font-size:35px">
-      <p><a href="https://www.instagram.com/sanchi_bhalla/" target="_blank">
+      <p><a href="https://www.instagram.com/sanchi__bhalla/" target="_blank">
         <i class="fa fa-instagram"></i>
         </a>
         <a href="https://www.linkedin.com/in/sanchi-bhalla-48006a17a/" target="_blank">
           <i class="fa fa-linkedin"></i>
         </a>
-        <a href="https://www.instagram.com/sanchi_bhalla/" target="_blank">
+        <a href="https://www.instagram.com/sanchi__bhalla/" target="_blank">
           <i class="fa fa-twitter"></i>
         </a>
         <a href="https://github.com/Sanchi7Bhalla" target="_blank">
