--- a/html/resume.html
+++ b/html/resume.html
@@ -68,8 +68,8 @@
       </ul>
     <h2>Position of Resposibility </h2>
    <ul>
-    <li>Public Relations and Internal Affairs Head</li>
-    <li> Ashwamedh-The Dramatics Society Of Nsut</li>>
+    <li>Public Relations and Internal Affairs Head
+        Ashwamedh-The Dramatics Society Of Nsut</li>
    </ul>
      <h2>Projects Untertaken</h2>
    <ul>
