--- a/html/resume.html
+++ b/html/resume.html
@@ -10,7 +10,7 @@
      <link rel="faviconicon" href="../img/icon.png" type="image/png">
      <link rel="shortcut" href="../img/icon.png" type="image/png">
      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">     
-     <meta name="name" content="Saijal's portfolio">
+     <meta name="name" content="Sanchi's portfolio">
      <meta name="robot" content = "noindex , nofollow">
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -68,8 +68,7 @@
       </ul>
     <h2>Position of Resposibility </h2>
    <ul>
-    <li>Public Relations and Internal Affairs Head
-        Ashwamedh-The Dramatics Society Of Nsut</li>
+    <li>Public Relations and Internal Affairs Head at Ashwamedh-The Dramatics Society Of Nsut</li>
    </ul>
      <h2>Projects Untertaken</h2>
    <ul>
