--- a/html/index.html
+++ b/html/index.html
@@ -85,7 +85,7 @@
 <div class="stay-here">
   <div id="feedback-main">
     <div id="feedback-div">
-      <form data-email="saijal00bhalla@gmail.com" action="https://script.google.com/macros/s/AKfycbzbEEIwCmuvaRbmnKBNsRRxs7OPOUyjT-oKaOM4oQ/exec" method="post" class="form" id="feedback-form1" name="form1" enctype="multipart/form-data">
+      <form data-email="sanchibhalla98@gmail.com" action="https://script.google.com/macros/s/AKfycbyjqxoJleaWynfwHMGwkLB6FUC_8asjJIxYtlCDZA/exec" method="post" class="form" id="feedback-form1" name="form1" enctype="multipart/form-data">
         <p class="name">
           <input name="name" type="name" class="validate[required,custom[onlyLetter],length[0,100]] feedback-input" required placeholder="Name" id="feedback-name" />
         </p>
